--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,13 @@
-sonar.projectKey=djnixy_Laravel-CRUD-With-Multiple-Image-Upload_AYzehhwv42uHXS456GyH
-sonar.qualitygate.wait=true
+sonar.projectKey=djnixy_Laravel-CRUD-With-Multiple-Image-Upload
+sonar.organization=djnixy
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=Laravel-CRUD-With-Multiple-Image-Upload
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
